--- a/source/js/view/main.html
+++ b/source/js/view/main.html
@@ -3,7 +3,7 @@
 <ui-nav view="{{view}}"/>
 
 {{#view == "home"}}
-	<ui-home />
+	<ui-home/>
 {{/}}
 
 {{#view == "gallery"}}
@@ -22,4 +22,5 @@
 	<ui-contact />
 {{/}}
 
+<div class="whiteStripe"></div>
 <div class="blueStripe"></div>
