--- a/source/css/_objects.globalClasses.scss
+++ b/source/css/_objects.globalClasses.scss
@@ -6,19 +6,45 @@
 }
 
 .fixed-bg{
-	// min-height: calc(100% - 103px);
-	min-height: 100%;
+	height: 100%;
+	width: 100%;
 	background-size: cover;
-	// background-image: fixed;
+	background-attachment: fixed;
 	background-repeat: no-repeat;
 	background-position: center center;
+	background-image: url('../img/homescreen-bg.jpg');
 	z-index: -1;
-
-   // edia (max-width: @iphone-screen) {
-   //  background-attachment: scroll;
-   // }
-	// z-index: index($bg-elements, fixed-bg);
 }
+
+	// .scrolling-bg{
+	// 	// background-size: cover;
+	// 	background-color: $mainGrey !important;
+	// 	z-index: 1;
+	// 	min-height: 100%;
+	// 	box-shadow: 0 0 50px rgba(#000, 0.5);
+	// }
+	//
+	.fixed-bg{
+		overflow: hidden; // added for pseudo-element
+	  	position: relative;
+
+		&::before {
+			content: ' ';
+    		position: fixed; // instead of background-attachment
+	     	width: 100%;
+	     	height: 100%;
+	     	top: 0;
+	     	left: 0;
+	     	background-color: white;
+		 	background: url('/img/homescreen-bg.jpg') no-repeat center center;
+		   	background-size: cover;
+		   	will-change: transform;
+		    background-attachment: scroll;
+		   	z-index: -1;
+		 }
+	}
+
+
 
 .whiteStripe{
 	height: 40px;
@@ -28,7 +54,6 @@
 .blueStripe{
 	background-color: $mainBlue;
 	height: 20px;
-	margin-top: 20px;
 	width: 100%;
 }
 
@@ -40,7 +65,6 @@
 	width: 100%;
 }
 
-
 .intro--container__content{
 	border-top: solid 4px $mainBlue;
 	margin-top: 35px;
@@ -48,13 +72,11 @@
 	text-align: justify;
 }
 
-
 .stopthejump{
 	display: none;
-	height: 100px;
+	height: 80px;
 	width: 100%;
 }
-
 
 .imageContainer{
 	height: 390px;
@@ -104,10 +126,20 @@
 		}
 	}
 
+	.intro--container{
+		padding-bottom: 65px;
+		padding-top: 85px;
+	}
+
 }
 
 
 @media #{$viewport-mobile} {
+
+	.fixed-bg{
+		background-attachment: scroll;
+
+	}
 
 	.intro--container{
 		padding-top: 50px;
@@ -117,6 +149,8 @@
 	.intro--container__content{
 		padding-top: 20px;
 		margin-top: 20px;
+		margin-left: 20px;
+    	margin-right: 20px;
 	}
 
 	.imageContainer{
