--- a/source/css/module/homescreen.scss
+++ b/source/css/module/homescreen.scss
@@ -6,21 +6,9 @@
 
 
 @include module("homescreen") {
-	height: 300px;
-	background-image: url('../img/homescreen-bg.jpg');
-	width: 100%;
 	display: table;
-
-	&.fixed-bg{
-		height: 300px;
-		width: 100%;
-		background-size: cover;
-		background-attachment: fixed;
-		background-repeat: no-repeat;
-		background-position: center center;
-		z-index: -1;
-
-	}
+	width: 100%;
+	height: 100%;
 
 	.heading--container{
 		display: table-cell;
@@ -42,6 +30,7 @@
 		background-size: 100%;
 		position: absolute;
 		bottom: 5%;
+		left: 50%;
 		margin-left: -25px;
 		height: 20px;
 		width: 40px;
@@ -51,8 +40,8 @@
 
 		.heading--container{
 			h1{
-		    	width: 240px;
-		    	margin-left: -120px;
+		    	width: 260px;
+		    	margin-left: -130px;
 				font-size: 2rem;
 			}
 		}
