--- a/source/css/module/info.scss
+++ b/source/css/module/info.scss
@@ -6,6 +6,7 @@
 
 
 @include module("info") {
+    background-color: $color-background;
   	.imageContainer{
 		.leftImage{
 			background-image: url('../img/left-info-img.jpg');
