--- a/public/css/app.css
+++ b/public/css/app.css
@@ -872,7 +872,7 @@ h1, h2, h3, h4, p, li, a {
 .scrolling-bg {
   position: relative;
   min-height: 100%;
-  box-shadow: 0 0 50px rgba(0, 0, 0, 0.5); }
+  background-color: #f3f3f2; }
 
 .fixed-bg {
   height: 100%;
@@ -1088,9 +1088,17 @@ h1, h2, h3, h4, p, li, a {
  * @js:       ./source/js/module/gallery/gallery.js
  * @html:     ./source/js/module/gallery/gallery.html
  */
+.gallery .intro--container {
+  padding-bottom: 0px; }
+
+.gallery .intro--container__content {
+  padding-bottom: 20px; }
+
 .gallery .photos {
   max-width: 950px;
-  margin: 0 auto; }
+  margin: 0 auto;
+  margin-bottom: 0px;
+  padding-bottom: 40px; }
   .gallery .photos .images {
     display: inline-block;
     padding: 10px;
@@ -1344,8 +1352,8 @@ h1, h2, h3, h4, p, li, a {
     vertical-align: middle; }
     .homescreen .heading--container h1 {
       border: solid 4px #f3f3f2;
-      padding: 5px 5px 0px 5px;
-      width: 300px;
+      padding: 5px 10px 0px 10px;
+      width: auto;
       text-align: center;
       position: absolute;
       left: 50%;
