--- a/source/css/_objects.globalClasses.scss
+++ b/source/css/_objects.globalClasses.scss
@@ -1,7 +1,8 @@
 .scrolling-bg{
 	position: relative;
 	min-height: 100%;
-	box-shadow: 0 0 50px rgba(#000, 0.5);
+	background-color: $color-background;
+	// box-shadow: 0 0 50px rgba(#000, 0.5);
 	// z-index: index($bg-elements, scrolling-bg);
 }
 
