--- a/source/css/module/homescreen.scss
+++ b/source/css/module/homescreen.scss
@@ -16,8 +16,8 @@
 
 		h1{
 			border: solid 4px $color-background;
-			padding: 5px 5px 0px 5px;
-			width: 300px;
+			padding: 5px 10px 0px 10px;
+			width: auto;
 			text-align: center;
 			position: absolute;
 			left: 50%;
