--- a/source/css/module/gallery.scss
+++ b/source/css/module/gallery.scss
@@ -37,9 +37,11 @@
 				img{
 					width: 100%;
 					height: 100%;
+					cursor: pointer;
 
 					&:hover{
 						opacity: 0.4;
+						transition: opacity 0.2s ease-in;
 					}
 				}
 			}
@@ -193,7 +195,6 @@
     	z-index:10;
     	max-width: none;
 
-
 		.slider{
 			background: url("../img/arrow.png") no-repeat;
 			background-size: 100%;
@@ -203,16 +204,22 @@
 			position: absolute;
 			bottom: 50%;
 			margin-bottom: -45px;
+			cursor: pointer;
 
 
 			&__prev{
 				left: 30px;
 				transform: rotate(90deg);
+
 			}
 
 			&__next{
 				right: 30px;
 				transform: rotate(-90deg);
+			}
+
+			&:hover{
+				opacity: 0.6;
 			}
 		}
 
@@ -223,16 +230,31 @@
 			top: 10px;
 			font-size: 40px;
 			color: $white;
+			cursor: pointer;
+
+			&:hover{
+				opacity: 0.6;
+			}
 		}
 
 
 		.activeImage{
-			width: 100%;
-			height: 100%;
+			width: 60%;
+			height: 85%;
 			text-align: center;
 			z-index: 1002;
-			display: table-cell;
-			vertical-align: middle;
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			transform: translate(-50%, -50%);
+
+			img{
+				max-height: 100%;
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				transform: translate(-50%, -50%);
+			}
 		}
 	}
 
