Added page transition

--- a/source/js/view/main.html
+++ b/source/js/view/main.html
@@ -2,6 +2,10 @@
 <ui-homescreen />
 <ui-nav view="{{view}}"/>
 
+<div class="white-background">
+
+
+
 {{#view == "home"}}
 	<ui-home />
 {{/}}
@@ -21,6 +25,8 @@
 {{#view == "contact"}}
 	<ui-contact />
 {{/}}
+
+</div>
 
 <div class="whiteStripe"></div>
 <div class="blueStripe"></div>
