--- a/public/css/app.css
+++ b/public/css/app.css
@@ -876,6 +876,25 @@ h1, h2, h3, h4, p, li, a {
   min-height: 100%;
   background-color: #f3f3f2; }
 
+.localArea, .home, .info, .gallery, .contact {
+  -webkit-animation: fadein 2s;
+          animation: fadein 2s; }
+
+.white-background {
+  background: white; }
+
+@-webkit-keyframes fadein {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+
+@keyframes fadein {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+
 .fixed-bg {
   height: 100%;
   width: 100%;
@@ -883,7 +902,7 @@ h1, h2, h3, h4, p, li, a {
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-position: center center;
-  background-image: url("../img/homescreen-bg.jpg"); }
+  background-image: url("../img/homescreen-bg-2.jpg"); }
 
 .fixed-bg {
   overflow: hidden;
