--- a/source/css/_objects.globalClasses.scss
+++ b/source/css/_objects.globalClasses.scss
@@ -6,6 +6,19 @@
 	// z-index: index($bg-elements, scrolling-bg);
 }
 
+.localArea, .home, .info, .gallery, .contact{
+	animation: fadein 2s;
+}
+
+.white-background{
+	background: white;
+}
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
 .fixed-bg{
 	height: 100%;
 	width: 100%;
@@ -13,7 +26,7 @@
 	background-attachment: fixed;
 	background-repeat: no-repeat;
 	background-position: center center;
-	background-image: url('../img/homescreen-bg.jpg');
+	background-image: url('../img/homescreen-bg-2.jpg');
 	// z-index: -1;
 }
 
