Added final images

--- a/source/css/module/gallery.scss
+++ b/source/css/module/gallery.scss
@@ -46,45 +46,27 @@
 				}
 			}
 
-			&.image0{
+			&.image1, &.image10, &.image12, &.image20{
 				float: left;
 				width: 50%;
 			}
 
-			&.image1{
+			&.image2, &.image11, &.image13, &.image21{
 				width: 50%;
 				vertical-align: top;
 			}
-
-			&.image2{
-				width: 28%;
-			}
-
-			&.image3{
-				width: 28%;
-			}
-
-			&.image4{
+			&.image3, &.image5, &.image4, &.image17, &.image18, &.image19 {
+				width: 33.3%;
 				vertical-align: top;
-				width: 44%;
 			}
 
-			&.image5,&.image6{
-				width: 50%;
-			}
-
-			&.image7, &.image8, &.image9{
-				width: 33%;
-			}
-
-			// Old styles and indexing
-			&.image10{
+			&.image6{
 				float: left;
 				width: 350px;
 				height: 400px;
 			}
 
-			&.image11{
+			&.image7{
 				width: 300px;
 				vertical-align: top;
 				height: 200px;
@@ -97,7 +79,7 @@
 				}
 			}
 
-			&.image12{
+			&.image8{
 				width: 300px;
 				height: 200px;
 				vertical-align: top;
@@ -110,7 +92,7 @@
 				}
 			}
 
-			&.image13{
+			&.image9{
 				width: 600px;
 				vertical-align: top;
 				margin-top: 20px;
@@ -130,73 +112,156 @@
 			}
 
 			&.image14{
-				width: 350px;
-				float:left;
-
-				.images__img{
-
-					img{
-						height: 300px;
-					}
-				}
+				width: 25.5%;
 			}
 
 			&.image15{
-				width: 300px;
-				vertical-align: top;
-				.images__img{
-
-					img{
-						height: 300px;
-					}
-				}
+				width: 31%;
 			}
 
 			&.image16{
-				width: 300px;
 				vertical-align: top;
-				.images__img{
-
-					img{
-						height: 300px;
-					}
-				}
+				width: 43.5%;
 			}
 
-			&.image17{
-				width: 475px;
-				vertical-align: top;
-
-
-				.images__img{
-					position: relative;
-					overflow: hidden;
-					height: 300px;
-
-					img{
-						position: absolute;
-						height: auto;
-						bottom: 0;
-					}
-				}
+			&.image20{
+				width: 36.5%;
+			}
+			&.image21{
+				width: 63.5%;
 			}
 
-			&.image18{
-				width: 475px;
-				vertical-align: top;
+			// &.image10{
+			// }
+			//
+			// &.image11,&.image12{
+			// 	width: 50%;
+			// }
 
-				.images__img{
-					height: 300px;
-					position: relative;
-					overflow: hidden;
+			// &.image14, &.image15, &.image16{
+			// 	width: 33%;
+			// }
 
-					img{
-						position: absolute;
-						height: auto;
-						bottom: 0;
-					}
-				}
-			}
+			// Old styles and indexing
+			// &.image14{
+			// 	float: left;
+			// 	width: 350px;
+			// 	height: 400px;
+			// }
+			//
+			// &.image15{
+			// 	width: 300px;
+			// 	vertical-align: top;
+			// 	height: 200px;
+			//
+			// 	.images__img{
+			//
+			// 		img{
+			// 			height: 200px;
+			// 		}
+			// 	}
+			// }
+			//
+			// &.image16{
+			// 	width: 300px;
+			// 	height: 200px;
+			// 	vertical-align: top;
+			//
+			// 	.images__img{
+			//
+			// 		img{
+			// 			height: 200px;
+			// 		}
+			// 	}
+			// }
+
+			// &.image18{
+			// 	width: 600px;
+			// 	vertical-align: top;
+			// 	margin-top: 20px;
+			// 	overflow: hidden;
+			//
+			// 	.images__img{
+			// 		height: 190px;
+			// 		position: relative;
+			// 	}
+			//
+			// 	img{
+			// 		height: auto;
+			// 		position: absolute;
+			// 		bottom: -160px;
+			// 		right: 0;
+			// 	}
+			// }
+			//
+			// &.image19{
+			// 	width: 350px;
+			// 	float:left;
+			//
+			// 	.images__img{
+			//
+			// 		img{
+			// 			height: 300px;
+			// 		}
+			// 	}
+			// }
+			//
+			// &.image20{
+			// 	width: 300px;
+			// 	vertical-align: top;
+			// 	.images__img{
+			//
+			// 		img{
+			// 			height: 300px;
+			// 		}
+			// 	}
+			// }
+			//
+			// &.image21{
+			// 	width: 300px;
+			// 	vertical-align: top;
+			// 	.images__img{
+			//
+			// 		img{
+			// 			height: 300px;
+			// 		}
+			// 	}
+			// }
+			//
+			// &.image22{
+			// 	width: 475px;
+			// 	vertical-align: top;
+			//
+			//
+			// 	.images__img{
+			// 		position: relative;
+			// 		overflow: hidden;
+			// 		height: 300px;
+			//
+			// 		img{
+			// 			position: absolute;
+			// 			height: auto;
+			// 			bottom: 0;
+			// 		}
+			// 	}
+			// }
+			//
+			// &.image23{
+			// 	width: 475px;
+			// 	vertical-align: top;
+			//
+			// 	.images__img{
+			// 		height: 300px;
+			// 		position: relative;
+			// 		overflow: hidden;
+			//
+			// 		img{
+			// 			position: absolute;
+			// 			height: auto;
+			// 			bottom: 0;
+			// 		}
+			// 	}
+			// }
 		}
 
 		.slider, .cross{
@@ -292,7 +357,7 @@
 
 			.images{
 
-				&.image10{
+				&.image6{
 					float: left;
 					width: 280px;
 					height: 310px;
@@ -300,7 +365,7 @@
 
 				}
 
-				&.image11{
+				&.image7{
 					width: 220px;
 					height: auto;
 
@@ -312,7 +377,7 @@
 					}
 				}
 
-				&.image12{
+				&.image8{
 					width: 220px;
 					height: auto;
 
@@ -324,7 +389,7 @@
 					}
 				}
 
-				&.image13{
+				&.image9{
 					width: 440px;
 					height: auto;
 					margin-top: 0;
@@ -333,72 +398,7 @@
 						height: 140px ;
 
 						img{
-							bottom: -120px;
-						}
-					}
-				}
-
-				&.image14{
-					width: 280px;
-					height: auto;
-					margin-top: 0;
-
-					.images__img{
-
-						img{
-							height: 230px ;
-						}
-					}
-				}
-				&.image15{
-					width: 220px;
-					height: auto;
-					margin-top: 0;
-
-					.images__img{
-
-						img{
-							height: 230px ;
-						}
-					}
-				}
-
-				&.image16{
-					width: 220px;
-					height: auto;
-					margin-top: 0;
-
-					.images__img{
-						img{
-							height: 230px ;
-						}
-					}
-				}
-
-				&.image17{
-					width: 360px;
-					height: auto;
-					margin-top: 0;
-
-					.images__img{
-						height: 230px;
-
-						img{
-							height: 230px ;
-						}
-					}
-				}
-
-				&.image18{
-					width: 360px;
-					height: auto;
-					margin-top: 0;
-
-					.images__img{
-						height: 230px ;
-
-						img{
-							height: 230px ;
+							    bottom: -120px;
 						}
 					}
 				}
@@ -423,19 +423,15 @@
 					}
 				}
 
-				&.image13{
-					.images__img{
-						img{
-							bottom:auto;
-						}
-					}
-				}
-				&.image17, &.image18{
+
+				&.image9{
+					margin-top: 0;
+
 					.images__img{
 						height: auto;
 						img{
 							position: relative;
-							// bottom:auto;
+							bottom:auto;
 						}
 					}
 				}
