--- a/source/css/module/info.scss
+++ b/source/css/module/info.scss
@@ -9,7 +9,7 @@
     background-color: $color-background;
   	.imageContainer{
 		.leftImage{
-			background-image: url('../img/left-info-img.jpg');
+			background-image: url('../img/left-info-img-2.jpg');
 		}
 
 		.rightImage{
