--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1138,89 +1138,55 @@ h1, h2, h3, h4, p, li, a {
         .gallery .photos .images .images__img img:hover {
           opacity: 0.4;
           transition: opacity 0.2s ease-in; }
-    .gallery .photos .images.image0 {
+    .gallery .photos .images.image1, .gallery .photos .images.image10, .gallery .photos .images.image12, .gallery .photos .images.image20 {
       float: left;
       width: 50%; }
-    .gallery .photos .images.image1 {
+    .gallery .photos .images.image2, .gallery .photos .images.image11, .gallery .photos .images.image13, .gallery .photos .images.image21 {
       width: 50%;
       vertical-align: top; }
-    .gallery .photos .images.image2 {
-      width: 28%; }
-    .gallery .photos .images.image3 {
-      width: 28%; }
-    .gallery .photos .images.image4 {
-      vertical-align: top;
-      width: 44%; }
-    .gallery .photos .images.image5, .gallery .photos .images.image6 {
-      width: 50%; }
-    .gallery .photos .images.image7, .gallery .photos .images.image8, .gallery .photos .images.image9 {
-      width: 33%; }
-    .gallery .photos .images.image10 {
+    .gallery .photos .images.image3, .gallery .photos .images.image5, .gallery .photos .images.image4, .gallery .photos .images.image17, .gallery .photos .images.image18, .gallery .photos .images.image19 {
+      width: 33.3%;
+      vertical-align: top; }
+    .gallery .photos .images.image6 {
       float: left;
       width: 350px;
       height: 400px; }
-    .gallery .photos .images.image11 {
+    .gallery .photos .images.image7 {
       width: 300px;
       vertical-align: top;
       height: 200px; }
-      .gallery .photos .images.image11 .images__img img {
+      .gallery .photos .images.image7 .images__img img {
         height: 200px; }
-    .gallery .photos .images.image12 {
+    .gallery .photos .images.image8 {
       width: 300px;
       height: 200px;
       vertical-align: top; }
-      .gallery .photos .images.image12 .images__img img {
+      .gallery .photos .images.image8 .images__img img {
         height: 200px; }
-    .gallery .photos .images.image13 {
+    .gallery .photos .images.image9 {
       width: 600px;
       vertical-align: top;
       margin-top: 20px;
       overflow: hidden; }
-      .gallery .photos .images.image13 .images__img {
+      .gallery .photos .images.image9 .images__img {
         height: 190px;
         position: relative; }
-      .gallery .photos .images.image13 img {
+      .gallery .photos .images.image9 img {
         height: auto;
         position: absolute;
         bottom: -160px;
         right: 0; }
     .gallery .photos .images.image14 {
-      width: 350px;
-      float: left; }
-      .gallery .photos .images.image14 .images__img img {
-        height: 300px; }
+      width: 25.5%; }
     .gallery .photos .images.image15 {
-      width: 300px;
-      vertical-align: top; }
-      .gallery .photos .images.image15 .images__img img {
-        height: 300px; }
+      width: 31%; }
     .gallery .photos .images.image16 {
-      width: 300px;
-      vertical-align: top; }
-      .gallery .photos .images.image16 .images__img img {
-        height: 300px; }
-    .gallery .photos .images.image17 {
-      width: 475px;
-      vertical-align: top; }
-      .gallery .photos .images.image17 .images__img {
-        position: relative;
-        overflow: hidden;
-        height: 300px; }
-        .gallery .photos .images.image17 .images__img img {
-          position: absolute;
-          height: auto;
-          bottom: 0; }
-    .gallery .photos .images.image18 {
-      width: 475px;
-      vertical-align: top; }
-      .gallery .photos .images.image18 .images__img {
-        height: 300px;
-        position: relative;
-        overflow: hidden; }
-        .gallery .photos .images.image18 .images__img img {
-          position: absolute;
-          height: auto;
-          bottom: 0; }
+      vertical-align: top;
+      width: 43.5%; }
+    .gallery .photos .images.image20 {
+      width: 36.5%; }
+    .gallery .photos .images.image21 {
+      width: 63.5%; }
   .gallery .photos .slider, .gallery .photos .cross {
     display: none; }
 
@@ -1291,62 +1257,28 @@ h1, h2, h3, h4, p, li, a {
     width: 80%; }
   .gallery .photos {
     max-width: 720px; }
-    .gallery .photos .images.image10 {
+    .gallery .photos .images.image6 {
       float: left;
       width: 280px;
       height: 310px; }
-    .gallery .photos .images.image11 {
+    .gallery .photos .images.image7 {
       width: 220px;
       height: auto; }
-      .gallery .photos .images.image11 .images__img img {
+      .gallery .photos .images.image7 .images__img img {
         height: 160px; }
-    .gallery .photos .images.image12 {
+    .gallery .photos .images.image8 {
       width: 220px;
       height: auto; }
-      .gallery .photos .images.image12 .images__img img {
+      .gallery .photos .images.image8 .images__img img {
         height: 160px; }
-    .gallery .photos .images.image13 {
+    .gallery .photos .images.image9 {
       width: 440px;
       height: auto;
       margin-top: 0; }
-      .gallery .photos .images.image13 .images__img {
+      .gallery .photos .images.image9 .images__img {
         height: 140px; }
-        .gallery .photos .images.image13 .images__img img {
-          bottom: -120px; }
-    .gallery .photos .images.image14 {
-      width: 280px;
-      height: auto;
-      margin-top: 0; }
-      .gallery .photos .images.image14 .images__img img {
-        height: 230px; }
-    .gallery .photos .images.image15 {
-      width: 220px;
-      height: auto;
-      margin-top: 0; }
-      .gallery .photos .images.image15 .images__img img {
-        height: 230px; }
-    .gallery .photos .images.image16 {
-      width: 220px;
-      height: auto;
-      margin-top: 0; }
-      .gallery .photos .images.image16 .images__img img {
-        height: 230px; }
-    .gallery .photos .images.image17 {
-      width: 360px;
-      height: auto;
-      margin-top: 0; }
-      .gallery .photos .images.image17 .images__img {
-        height: 230px; }
-        .gallery .photos .images.image17 .images__img img {
-          height: 230px; }
-    .gallery .photos .images.image18 {
-      width: 360px;
-      height: auto;
-      margin-top: 0; }
-      .gallery .photos .images.image18 .images__img {
-        height: 230px; }
-        .gallery .photos .images.image18 .images__img img {
-          height: 230px; } }
+        .gallery .photos .images.image9 .images__img img {
+          bottom: -120px; } }
 
 @media screen and (max-width: 767px) {
   .gallery .photos .images {
@@ -1359,12 +1291,13 @@ h1, h2, h3, h4, p, li, a {
       background: none; }
       .gallery .photos .images .images__img img {
         height: auto !important; }
-    .gallery .photos .images.image13 .images__img img {
-      bottom: auto; }
-    .gallery .photos .images.image17 .images__img, .gallery .photos .images.image18 .images__img {
-      height: auto; }
-      .gallery .photos .images.image17 .images__img img, .gallery .photos .images.image18 .images__img img {
-        position: relative; }
+    .gallery .photos .images.image9 {
+      margin-top: 0; }
+      .gallery .photos .images.image9 .images__img {
+        height: auto; }
+        .gallery .photos .images.image9 .images__img img {
+          position: relative;
+          bottom: auto; }
   .gallery .background .slider {
     bottom: 10%;
     height: 45px;
@@ -1510,7 +1443,7 @@ h1, h2, h3, h4, p, li, a {
 .info {
   background-color: #f3f3f2; }
   .info .imageContainer .leftImage {
-    background-image: url("../img/left-info-img.jpg"); }
+    background-image: url("../img/left-info-img-2.jpg"); }
   .info .imageContainer .rightImage {
     background-image: url("../img/right-info-img-2.jpg"); }
   .info .floorPlanPanel {
