--- a/source/css/_objects.globalClasses.scss
+++ b/source/css/_objects.globalClasses.scss
@@ -38,25 +38,25 @@
 	// 	box-shadow: 0 0 50px rgba(#000, 0.5);
 	// }
 	//
-	.fixed-bg{
-		overflow: hidden; // added for pseudo-element
-	  	position: relative;
+.fixed-bg{
+	overflow: hidden; // added for pseudo-element
+  	position: relative;
 
-		&::before {
-			content: ' ';
-    		position: fixed; // instead of background-attachment
-	     	width: 100%;
-	     	height: 100%;
-	     	top: 0;
-	     	left: 0;
-	     	background-color: white;
-		 	background: url('/img/homescreen-bg.jpg') no-repeat center center;
-		   	background-size: cover;
-		   	will-change: transform;
-		    background-attachment: scroll;
-		   	z-index: -1;
-		 }
-	}
+	&::before {
+		content: ' ';
+		position: fixed; // instead of background-attachment
+     	width: 100%;
+     	height: 100%;
+     	top: 0;
+     	left: 0;
+     	background-color: white;
+	 	background: url('/img/homescreen-bg-2.jpg') no-repeat center center;
+	   	background-size: cover;
+	   	will-change: transform;
+	    background-attachment: scroll;
+	   	z-index: -1;
+	 }
+}
 
 
 
@@ -100,7 +100,6 @@
 .imageContainer{
 	height: 390px;
 	width: 100%;
-	// padding-bottom: 40px;
 
 	.leftImage{
 		background-size: cover;
